<?xml version="1.0"?>
<package>

    <name>acrobat_control</name>
    <version>1.0.0</version>
    <description>
        Control the acrobat robot single joint
    </description>

    <maintainer email="olima@isr.tecnico.uliboa.pt">Oscar Lima</maintainer>

    <license>GPLv3</license>

    <author email="olima@isr.tecnico.uliboa.pt">Oscar Lima</author>

    <!-- build dependencies -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- run dependencies -->
    <run_depend>controller_manager</run_depend>
    <run_depend>joint_state_controller</run_depend>
    <run_depend>robot_state_publisher</run_depend>
    <run_depend>rqt_gui</run_depend>
    <run_depend>effort_controllers</run_depend>

</package>
